# credit-scoring

./: README.md  docker-compose.yml
ai-service/: .env.example  Dockerfile  README.md  pyproject.toml  rebuild_inside.py  rebuild_inside.sh  requirements.txt
ai-service/app/: main.py
ai-service/app/api/: exceptions.py  routes.py
ai-service/app/core/: config.py  health.py  preprocessor.py
ai-service/app/models/: schemas.py
ai-service/app/scripts/: _config.py  _monitor.py  _riskbands.py  _train.py  _transform.py  _wrapper.py  run_pipeline.py
ai-service/app/services/: scoring_service.py
ai-service/models/: model_comparison_report.txt  pipeline_metadata.v4.1_20260507.json  pipeline_metadata.v4.1_20260508.json
core-backend/: Dockerfile  effective-pom  pom.xml
core-backend/src/main/resources/: application.yml
db/: schema.sql
frontend/: Dockerfile  angular.json  index.html  nginx.conf  package-lock.json  package.json
frontend/.angular/cache/18.2.21/credit-scoring/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
frontend/src/: index.html  styles.css
frontend/src/app/: app.routes.ts
frontend/src/app/components/layout/: layout.component.css  layout.component.html  layout.component.ts
frontend/src/app/components/risk-tag/: risk-tag.component.ts
frontend/src/app/models/: models.ts
frontend/src/app/pages/application-detail/: application-detail.component.css  application-detail.component.html  application-detail.component.ts
frontend/src/app/services/: api.service.ts
frontend/src/environments/: environment.prod.ts  environment.ts
(+37 files in other folders)
